force-app/main/default/objects/custom_create146__c/custom_create146__c.object-meta.xml
<CustomObject>
    <label>Custom created object146</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects146</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>