force-app/main/default/objects/custom_create146__c/fields/custom_create_146field507__c.field-meta.xml
<CustomField>
    <fullName>custom_create_146field507__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 146field507</label>
    <type>Checkbox</type>
</CustomField>